--- a/src/app/modules/dashboard/locataire/locataire.component.html
+++ b/src/app/modules/dashboard/locataire/locataire.component.html
@@ -483,7 +483,7 @@
                 </div>
                 <div class="lg:hidden flex items-center justify-between mb-3 ">
                   <div class="flex flex-row items-center justify-between ">
-                    <h3 class="w-full	text-sm mr-2">Afficher par</h3>
+                    <h3 class="w-full	text-sm mr-2 fold">Afficher par</h3>
                     <button type="button"
                       class="flex items-center w-full justify-between justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-100 focus:ring-indigo-500"
                       id="menu-button" aria-expanded="true" aria-haspopup="true">
