--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -15,3 +15,9 @@
  @mixin inter(){
 font-family: 'Inter', sans-serif;
  }
+ 
+ @mixin fold() {
+  @media (max-width: 280px) {
+  display: none;
+  }
+}
