--- a/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
@@ -2,7 +2,7 @@
     <div class="py-3 border-b-2">
         <h1 class="popping text-xl font-bold ">Détails</h1>
     </div>
-    <form [formGroup]="detailsForm">
+    <form [formGroup]="detailsForm" (ngSubmit)="formSubmit()">
 
         <div class="px-3 mt-5">
 
@@ -305,7 +305,7 @@
             </div>
             <div class="mt-5 px-3">
                 <h1 class="popping text-base font-semibold">Proximité</h1>
-                <div class="flex flex-row flex-wrap md:flex-nowrap">
+                <div class="flex flex-row flex-wrap ">
                     <fieldset class="space-y-5 mr-3" *ngFor="let prox of proximites">
                         <legend class="sr-only">{{prox}}</legend>
                         <div class="relative flex items-start">
@@ -405,6 +405,19 @@
                     </fieldset>
                 </div>
             </div>
+        </div>
+        <div class="px-3 mt-5 flex flex-col md:flex-row justify-between">
+            <button
+                class="text-blue-2 px-6 py-2 rounded-md shadow font-700  text-base bg-white   btnhover font-semibold flex flex-row items-center justify-center">
+                <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M3.825 6.46933L7.071 9.62524L5.657 11L4.72849e-07 5.5L5.657 -1.36883e-07L7.071 1.37476L3.832 4.52484L15 4.52484L15 6.46933L3.825 6.46933Z"
+                        fill="#6FB4E1" />
+                </svg>
+                <span class="ml-2">Précédent</span>
+            </button>
+            <button type="submit"
+                class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
         </div>
     </form>
 </div>
