--- a/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
@@ -1,4 +1,5 @@
 <div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
+    <form [formGroup] ="informationForm" (ngSubmit)="formSubmit()">
     <div class="py-5 border-b-2">
         <h1 class="popping text-xl font-bold ">Informations</h1>
     </div>
@@ -36,19 +37,19 @@
                 class="origin-top-right absolute z-10 left-0 w-full mt-2     rounded-md shadow-lg overflow-hidden bg-white divide-y divide-gray-200 ring-1 ring-black ring-opacity-5 focus:outline-none"
                 tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-option-0">
                 <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
-                    id="listbox-option-0" role="option" (click)="managementDropDown('Régie 1')">
+                    id="listbox-option-0" role="option" (click)="managementRegieDropDown('Régie 1')">
                     <p class="font-medium">
                         Régie 1
                     </p>
                 </li>
                 <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
-                    id="listbox-option-0" role="option" (click)="managementDropDown('Régie 2')">
+                    id="listbox-option-0" role="option" (click)="managementRegieDropDown('Régie 2')">
                     <p class="font-medium">
                         Régie 2
                     </p>
                 </li>
                 <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
-                    id="listbox-option-0" role="option" (click)="managementDropDown('Régie 3')">
+                    id="listbox-option-0" role="option" (click)="managementRegieDropDown('Régie 3')">
                     <p class="font-medium">
                         Régie 3
                     </p>
@@ -64,7 +65,7 @@
                 [ngClass]="document=='+ Ajouter' ? 'text-blue-2' : 'text-gray-700'">
                 {{document}}</span>
             <span class="font-medium mx-3 " *ngIf="document != '+ Ajouter'">{{progress$|async}} %</span>
-            <input type="file" id="upload0" (change)="documentUpload($event)" style="display:none" #file>
+            <input type="file" id="upload0" formControlName="agencyForm" (change)="documentUpload($event)" style="display:none" #file>
         </div>
     </div>
     <div class="mt-5 px-3">
@@ -144,7 +145,7 @@
     </div>
     <div class="mt-5 px-3">
         <h1 class="popping text-base font-semibold mb-3">Date de disponibilité</h1>
-        <input type="date" name="birth" id="birth" autocomplete="birth"
+        <input type="date" name="availablity" id="availablity" formControlName="availablity" autocomplete="availablity"
             class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block border-gray-300 shadow-sm sm:text-sm  rounded-md">
     </div>
     <div class="py-5 px-3 bg-gray-4">
@@ -164,7 +165,7 @@
                     <button type="button" (click)="selectRegionDropDown = !selectRegionDropDown"
                         class="flex items-center  justify-between w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none"
                         id="menu-button" aria-expanded="true" aria-haspopup="true">
-                        <span class=" text-lg">Comptimmo</span>
+                        <span class=" text-lg">{{selectedRegionValue}}</span>
                         <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7 9L0.0717961 0.750001L13.9282 0.749998L7 9Z" fill="#6FB4E1" />
                         </svg>
@@ -174,21 +175,21 @@
                         tabindex="-1" role="listbox" aria-labelledby="listbox-label"
                         aria-activedescendant="listbox-option-0">
                         <li class="text-gray-900 cursor-default select-none relative p-4 text-sm" id="listbox-option-0"
-                            role="option">
+                            role="option" (click)="managementRegionDropDown(' Region 1')">
                             <p class="font-normal">
-                                Published
+                                Region 1
                             </p>
                         </li>
                         <li class="text-gray-900 cursor-default select-none relative p-4 text-sm" id="listbox-option-0"
-                            role="option">
+                            role="option" (click)="managementRegionDropDown(' Region 2')">
                             <p class="font-normal">
-                                Published
+                                Region 2
                             </p>
                         </li>
                         <li class="text-gray-900 cursor-default select-none relative p-4 text-sm" id="listbox-option-0"
-                            role="option">
+                            role="option" (click)="managementRegionDropDown('Region 3')">
                             <p class="font-normal">
-                                Published
+                                Region 3
                             </p>
                         </li>
                     </ul>
@@ -197,7 +198,7 @@
 
             <div class="ml-0 md:ml-2 w-full">
                 <h1 class="popping text-base font-semibold mb-3 mt-5 md:mt-0">Code postal </h1>
-                <input type="text" name="email" id="email"
+                <input type="text" name="zipCode" id="zipCode" formControlName="zipCode"
                     class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md px-4 py-3 "
                     placeholder="Votre code postal" aria-describedby="email-description">
             </div>
@@ -206,7 +207,7 @@
     </div>
     <div class="px-3 mt-5">
         <h1 class="popping text-base font-semibold mb-3">Adresse </h1>
-        <input type="text" name="email" id="email"
+        <input type="text" name="address" id="address" formControlName="address"
             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md px-4 py-3 "
             placeholder="Votre adresse" aria-describedby="email-description">
         <div class="relative flex items-start mt-5">
@@ -228,7 +229,7 @@
             <div class="w-full">
                 <h1 class="popping text-base font-semibold mb-3">Surface habitable </h1>
                 <div class="relative">
-                    <input type="text" name="email" id="email"
+                    <input type="text" name="livingSpace" id="livingSpace" formControlName="livingSpace"
                         class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                         placeholder="0" aria-describedby="email-description">
                     <span class="absolute top-2 text-lg	 right-2 text-gray-500">m2</span>
@@ -238,7 +239,7 @@
             <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
                 <h1 class="popping text-base font-semibold mb-3">Surface terrasse/balcon </h1>
                 <div class="relative">
-                    <input type="text" name="email" id="email"
+                    <input type="text" name="terraceArea" id="terraceArea" formControlName="terraceArea"
                         class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                         placeholder="0" aria-describedby="email-description">
                     <span class="absolute top-2 text-lg	 right-2 text-gray-500">m2</span>
@@ -250,15 +251,16 @@
     <div class="  w-full md:w-1/2 px-3 mt-5">
         <h1 class="popping text-base font-semibold mb-3">Surface jardin </h1>
         <div class="relative">
-            <input type="text" name="email" id="email"
+            <input type="text" name="gardenArea" id="gardenArea" formControlName="gardenArea"
                 class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                 placeholder="0" aria-describedby="email-description">
             <span class="absolute top-2 text-lg	 right-2 text-gray-500">m2</span>
         </div>
     </div>
     <div class="px-3 mt-5 flex justify-end">
-        <button
+        <button type="submit"
             class="text-white px-6 py-2 rounded-md font-700 text-xs md:text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between">Suivant</button>
     </div>
+  </form>
 
 </div>
