--- a/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
@@ -2,7 +2,7 @@
     <div class="py-5 border-b-2">
         <h1 class="popping text-xl font-bold ">Price</h1>
     </div>
-
+    <form [formGroup] ="priceForm" (ngSubmit)="submitForm()">
     <div class="px-3 mt-5">
         <div class="px-3 mt-5">
             <div class="flex flex-col md:flex-row  justify-between mt-2">
@@ -10,7 +10,7 @@
                     <h1 class="popping text-base font-semibold mb-3">Prix brut <span class="font-extralight"> (sans
                             charges)</span> </h1>
                     <div class="relative">
-                        <input type="number" name="email" id="email"
+                        <input type="number" name="grossPrice" id="grossPrice" formControlName="grossPrice"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                             placeholder="0" aria-describedby="email-description">
                         <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
@@ -20,16 +20,39 @@
                 <div class="ml-0 md:ml-2 mt-3 md:mt-[2.2rem] w-full">
 
 
-                    <div class="relative">
-                        <button type="button"
+                    <div class="relative" >
+                        <button type="button" (click)="selectTypeOfBrutSalaryDropDown = !selectTypeOfBrutSalaryDropDown"
                             class="flex items-center  justify-between w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none"
                             id="menu-button" aria-expanded="true" aria-haspopup="true">
-                            <span class=" text-lg">par mois</span>
+                            <span class=" text-lg">{{selectedTypeOfBrutSalaryValue}}</span>
                             <svg width="14" height="9" viewBox="0 0 14 9" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M7 9L0.0717961 0.750001L13.9282 0.749998L7 9Z" fill="#6FB4E1" />
                             </svg>
                         </button>
+                        <ul [@selectInput]="selectTypeOfBrutSalaryDropDown ? false : true"
+                            class="origin-top-right absolute z-10 left-0 w-full mt-2     rounded-md shadow-lg overflow-hidden bg-white divide-y divide-gray-200 ring-1 ring-black ring-opacity-5 focus:outline-none"
+                            tabindex="-1" role="listbox" aria-labelledby="listbox-label"
+                            aria-activedescendant="listbox-option-0">
+                            <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
+                                id="listbox-option-0" role="option" (click)="managementTypeOfBrutSalaryDropDown('Par mois')">
+                                <p class="font-medium">
+                                    Par mois
+                                </p>
+                            </li>
+                            <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
+                                id="listbox-option-0" role="option" (click)="managementTypeOfBrutSalaryDropDown('Par semaine')">
+                                <p class="font-medium">
+                                    Par semaine
+                                </p>
+                            </li>
+                            <li class="text-gray-900  select-none relative p-4 text-base cursor-pointer hover:bg-gray-400 hover:text-white"
+                                id="listbox-option-0" role="option" (click)="managementTypeOfBrutSalaryDropDown('Par ans')">
+                                <p class="font-medium">
+                                    Par ans
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -43,9 +66,9 @@
                     <h1 class="popping text-base font-semibold mb-3">Charges
                     </h1>
                     <div class="relative">
-                        <input type="number" name="email" id="email"
+                        <input type="number" name="expenses" id="expenses" formControlName="expenses"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
-                            placeholder="0" aria-describedby="email-description">
+                            placeholder="0" aria-describedby="expenses-description">
                         <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
                     </div>
                 </div>
@@ -63,9 +86,9 @@
                     <h1 class="popping text-base font-semibold mb-3">Prix net <span class="font-extralight"> (avec
                             charges)</span> </h1>
                     <div class="relative">
-                        <input type="number" name="email" id="email"
+                        <input type="number" name="netPrice" id="netPrice" formControlName="netPrice"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
-                            placeholder="0" aria-describedby="email-description">
+                            placeholder="0" aria-describedby="netPrice-description">
                         <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
                     </div>
                 </div>
@@ -85,9 +108,9 @@
                             (avec
                             charges)</span> </h1>
                     <div class="relative">
-                        <input type="number" name="email" id="email"
+                        <input type="number" name="accessoryFees" id="accessoryFees" formControlName="accessoryFees"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
-                            placeholder="0" aria-describedby="email-description">
+                            placeholder="0" aria-describedby="accessoryFees-description">
                         <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
                     </div>
                 </div>
@@ -109,11 +132,11 @@
                     <legend class="sr-only">Inclus dans le prix</legend>
                     <div class="relative flex items-start">
                         <div class="flex items-end h-5">
-                            <input id="terrain" aria-describedby="comments-description" name="comments" type="checkbox"
+                            <input id="parking" aria-describedby="parking-description" name="parking" type="checkbox" formControlName="parking"
                                 class=" h-4 w-4  active:border-4 border-blue-300 rounded-2xl">
                         </div>
                         <div class="ml-3 ">
-                            <label for="terrain" class="popping text-base font-medium	 text-gray-500">Inclus dans le
+                            <label for="parking" class="popping text-base font-medium	 text-gray-500">Inclus dans le
                                 prix</label>
                         </div>
                     </div>
@@ -139,10 +162,10 @@
                             inclu dans le prix)
                         </span> </h1>
                     <div class="relative">
-                        <input type="number" name="email" id="email"
+                        <input type="number" name="interior" id="interior" formControlName="interior"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                             placeholder="0" aria-describedby="email-description">
-                        <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
+                        <span class="absolute top-2 text-lg	 interior-2 text-gray-500">CHF</span>
                     </div>
                 </div>
 
@@ -154,7 +177,7 @@
                                 inclu dans le prix)
                             </span> </h1>
                         <div class="relative">
-                            <input type="number" name="email" id="email"
+                            <input type="number" name="exterior" id="exterior" formControlName="exterior"
                                 class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
                             <span class="absolute top-2 text-lg	 right-2 text-gray-500">CHF</span>
@@ -174,7 +197,8 @@
             </svg>
             <span class="ml-2">Précédent</span>
         </button>
-        <button
+        <button type="submit"
             class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
     </div>
+   </form>
 </div>
