--- a/src/assets/scss/base/_animation.scss
+++ b/src/assets/scss/base/_animation.scss
@@ -103,3 +103,23 @@
 .border-pulsate {
     animation: border-pulsate 2s infinite;
 }
+.pulse {
+	transform: scale(1);
+	animation: pulse 2s infinite;
+}
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(2);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
