--- a/src/assets/scss/base/_animation.scss
+++ b/src/assets/scss/base/_animation.scss
@@ -123,3 +123,12 @@
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
+.progress{
+  width: 0%;
+  	animation: progress 1s infinite;
+}
+@keyframes progress {
+  0% { margin-left: 0px; margin-right: 100%; }
+  50% { margin-left: 25%; margin-right: 0%; }
+  100% { margin-left: 100%; margin-right: 0; }
+}
