gestion du state good

--- a/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
@@ -416,7 +416,7 @@
                 </svg>
                 <span class="ml-2">Précédent</span>
             </button>
-            <button type="submit" [routerLink]="'/dashboard/bailleur/add-good/price'"
+            <button type="submit" 
                 class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
         </div>
     </form>
