--- a/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
@@ -265,7 +265,7 @@
         <div class="px-3 mt-5 flex justify-end">
             <button type="submit"
                 class="text-white px-6 py-2 rounded-md font-700 text-xs md:text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between"
-                [routerLink]="'/dashboard/bailleur/add-good/details'">Suivant</button>
+               >Suivant</button>
         </div>
     </form>
 
