--- a/src/app/modules/dashboard/bailleur/add-good/media/media.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/media/media.component.html
@@ -86,7 +86,7 @@
             </svg>
             <span class="ml-2">Précédent</span>
         </button>
-        <button [routerLink]="'/dashboard/bailleur/add-good/post'"
+        <button (click) ="formSubmit()"
             class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
     </div>
 </div>
