--- a/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
@@ -171,8 +171,8 @@
                             <input type="number" name="interior" id="interior" formControlName="interior"
                                 class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
-                            <span class="absolute top-2 text-lg	 interior-2 text-gray-500">CHF</span>
-                        </div>
+                                <span class="absolute top-2 text-lg right-2	 interior-2 text-gray-500">CHF</span>
+                            </div>
                     </div>
 
                     <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
