--- a/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
@@ -14,20 +14,30 @@
                         <h1 class="popping text-base font-semibold mb-3">Nombre de pièces </h1>
                         <div class="relative">
                             <input type="number" name="numberOfPieces" id="numberOfPieces"
+                                [ngClass]="(numberOfPieces?.dirty || numberOfPieces?.touched) && numberOfPieces?.invalid && numberOfPieces?.errors?.required ? 'border-red-600' : 'border-gray-300'"
                                 formControlName="numberOfPieces"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
                             <span class="absolute top-2 text-lg	 right-2 text-gray-500">pcs</span>
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(numberOfPieces?.dirty || numberOfPieces?.touched) && numberOfPieces?.invalid && numberOfPieces?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
 
                     <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
                         <h1 class="popping text-base font-semibold mb-3">Nombre chambre à coucher </h1>
                         <div class="relative">
                             <input type="number" name="numberOfRooms" id="numberOfRooms" formControlName="numberOfRooms"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                [ngClass]="(numberOfRooms?.dirty || numberOfRooms?.touched) && numberOfRooms?.invalid && numberOfRooms?.errors?.required ? 'border-red-600' : 'border-gray-300'"
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm  rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(numberOfRooms?.dirty || numberOfRooms?.touched) && numberOfRooms?.invalid && numberOfRooms?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
                 </div>
             </div>
@@ -43,19 +53,29 @@
                         <h1 class="popping text-base font-semibold mb-3">Nombre de WC </h1>
                         <div class="relative">
                             <input type="number" name="numberOfWC" id="numberOfWC" formControlName="numberOfWC"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                [ngClass]="(numberOfWC?.dirty || numberOfWC?.touched) && numberOfWC?.invalid && numberOfWC?.errors?.required ? 'border-red-600' : 'border-gray-300'"
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm  rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(numberOfWC?.dirty || numberOfWC?.touched) && numberOfWC?.invalid && numberOfWC?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
 
                     <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
                         <h1 class="popping text-base font-semibold mb-3">Nombre de salles de bains</h1>
                         <div class="relative">
                             <input type="number" name="numberOfBathRooms" id="numberOfBathRooms"
+                                [ngClass]="(numberOfBathRooms?.dirty || numberOfBathRooms?.touched) && numberOfBathRooms?.invalid && numberOfBathRooms?.errors?.required ? 'border-red-600' : 'border-gray-300'"
                                 formControlName="numberOfBathRooms"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm  rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(numberOfBathRooms?.dirty || numberOfBathRooms?.touched) && numberOfBathRooms?.invalid && numberOfBathRooms?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
                 </div>
 
@@ -72,11 +92,16 @@
                         <h1 class="popping text-base font-semibold mb-3">Nombre d’étages dans l’immeuble </h1>
                         <div class="relative">
                             <input type="number" name="numberOfFloors" id="numberOfFloors"
+                                [ngClass]="(numberOfFloors?.dirty || numberOfFloors?.touched) && numberOfFloors?.invalid && numberOfFloors?.errors?.required ? 'border-red-600' : 'border-gray-300'"
                                 formControlName="numberOfFloors"
                                 class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
                                 placeholder="0" aria-describedby="email-description">
 
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(numberOfFloors?.dirty || numberOfFloors?.touched) && numberOfFloors?.invalid && numberOfFloors?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
 
                     <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
@@ -104,21 +129,31 @@
                         <h1 class="popping text-base font-semibold mb-3">Année de construction </h1>
                         <div class="relative">
                             <input type="number" name="yearOfBuilding" id="yearOfBuilding"
+                                [ngClass]="(yearOfBuilding?.dirty || yearOfBuilding?.touched) && yearOfBuilding?.invalid && yearOfBuilding?.errors?.required ? 'border-red-600' : 'border-gray-300'"
                                 formControlName="yearOfBuilding"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm  rounded-md py-3 "
                                 placeholder="1990" aria-describedby="construction">
 
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(yearOfBuilding?.dirty || yearOfBuilding?.touched) && yearOfBuilding?.invalid && yearOfBuilding?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
 
                     <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
                         <h1 class="popping text-base font-semibold mb-3">Année de rénovation </h1>
                         <div class="relative">
                             <input type="number" name="yearOfRenovation" id="yearOfRenovation"
+                                [ngClass]="(yearOfRenovation?.dirty || yearOfRenovation?.touched) && yearOfRenovation?.invalid && yearOfRenovation?.errors?.required ? 'border-red-600' : 'border-gray-300'"
                                 formControlName="yearOfRenovation"
-                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                                class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm  rounded-md py-3 "
                                 placeholder="2015" aria-describedby="email-description">
                         </div>
+                        <span class="text-red-600 text-base"
+                            *ngIf="(yearOfRenovation?.dirty || yearOfRenovation?.touched) && yearOfRenovation?.invalid && yearOfRenovation?.errors?.required">
+                            Champ obligatoire.
+                        </span>
                     </div>
                 </div>
 
@@ -416,7 +451,7 @@
                 </svg>
                 <span class="ml-2">Précédent</span>
             </button>
-            <button type="submit" 
+            <button type="submit"
                 class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
         </div>
     </form>
